@@ -5,10 +5,11 @@
   <meta name="generator" content=
   "tidyp for OpenBSD (v1.04), see www.w3.org">
   <meta name="generator" content="Bluefish 2.2.8">
+  <meta name="generator" content="Bluefish 2.2.8">
   <meta content="text/html; charset=us-ascii" http-equiv=
   "Content-Type">
   <meta http-equiv="Last-Modified" content=
-  "Thu, 29 Sep 2016 22:15:58 UTC">
+  "Fri, 30 Sep 2016 16:38:40 UTC">
 
   <title>Ublu Midrange and Mainframe Life Cycle Extension
   Language</title>
@@ -59,7 +60,7 @@
 
   <p>Author: Jack J. Woehr<br>
   Original date: 2013-07-11<br>
-  Last edit: 2016-09-29</p>
+  Last edit: 2016-09-30</p>
   <pre>
  Copyright (c) 2015, Absolute Performance, Inc.
   http://www.absolute-performance.com Copyright (c) 2016, Jack J. Woehr
@@ -6153,8 +6154,9 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   <blockquote>
     <tt>/4? [-as400 @as400] [--,-printer ~@printer] [-to @var]
     [-get ~@{attribute}] | [[-instance] | [-set ~@{attribute}
-    ~@{value}]] ~@{printername} ~@{system} ~@{user} ~@{password} :
-    instance as400 printer and get/set attributes</tt><br>
+    ~@{value}] [-wtrjob]] ~@{printername} ~@{system} ~@{user}
+    ~@{password} : instance as400 printer and get/set
+    attributes</tt><br>
     <br>
     The <tt>printer</tt> command allows you to instance a printer
     and get or set printer attributes. If the <a href=
@@ -6218,6 +6220,9 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
           instance.</li>
         </ul>
       </li>
+
+      <li><tt>-wtrjob</tt> puts the printer's writer <a href=
+      "#job">job</a>.</li>
     </ul><i>Example<br>
     <br></i> <tt>&gt;as400 -to @s mybox myname
     mypwd</tt><tt><br></tt> <tt>&gt;printer -to @p -as400 @s
